--- a/projekt/aboutus.html
+++ b/projekt/aboutus.html
@@ -13,7 +13,7 @@
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
     <link rel="logo" href="img/black_firefox.png">
     <meta name="description" content="website, david, panchalingam">
     <link rel="stylesheet" href="style/style.css">
@@ -65,36 +65,27 @@
     <main>
         <div>
             <div class="welcombox">
-                <H1>Herzlich Wilkommen bei FireInvest</H1>
-
+                <H1>Über uns</H1>
             </div>
             <div class="welcome">
-                <p class="mtext">Wir Bieten ihnen zuverlässige Langzeit Investments mit wenig Risiko!
-                    Aber auch wenn sie Risikofreudig und an grossen Gewinspannen intressiert sind Sind wir der Richtige
-                    Partner für Sie!
-
+                <p class="mtext">Wir sind seit 10 Jahren erfolgreich im Geschäft! Dank unserem kleinen Team können wir sehr individuelle Lösungen für Sie Erarbeiten! Wir schauen gerne mit ihnen in die Zukunft!
                 </p>
             </div>
 
         </div>
-        <div class="borderyt">
-
-            <iframe width="1280" height="715" src="https://www.youtube.com/embed/QNOvuBt3qGQ">
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-
+        <span class="gruppenfoto">
+            <img src=https://images.unsplash.com/photo-1584048333516-bdf1d5305f1b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80
+                class="gphoto" alt="Gruppenfoto der Belegschaft">
+        </span>
     </main>
-
     <footer class="footerborder">
-        <div class="footertxt">
+        <span class="footertxt">
 
             <a href="Impressum.html">Impressum</a>
             <p>Copyright David Panchalingam</p>
 
 
-        </div>
+        </span>
 
     </footer>
 </body>
