--- a/projekt/Impressum.html
+++ b/projekt/Impressum.html
@@ -13,7 +13,7 @@
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
     <link rel="logo" href="img/black_firefox.png">
     <meta name="description" content="website, david, panchalingam">
     <link rel="stylesheet" href="style/style.css">
@@ -63,27 +63,16 @@
 
     </header>
     <main>
-        <div>
-            <div class="welcombox">
-                <H1>Herzlich Wilkommen bei FireInvest</H1>
-
-            </div>
-            <div class="welcome">
-                <p class="mtext">Wir Bieten ihnen zuverlässige Langzeit Investments mit wenig Risiko!
-                    Aber auch wenn sie Risikofreudig und an grossen Gewinspannen intressiert sind Sind wir der Richtige
-                    Partner für Sie!
-
-                </p>
-            </div>
-
+        <div class="impressum">
+            <p>Alle Links dienen zu Demonstrationszwecken und die zusmammenarbeit ist nicht existent!</p>
+            <p>Alle Fotos und Logos die benutzt wurden sind Lizenzfrei von den untenstehenden Links verfügbar</p>
+            <p>Alle Videos dienen nur zu Demonstrationszwecken ich besitzt die rechte nicht</p>
+            <a href="https://de.findicons.com/">Findicons</a>
+            <a href="https://unsplash.com/">Unsplash</a>
+            <a href="https://fontawesome.com/">Fontawesome</a>
         </div>
-        <div class="borderyt">
-
-            <iframe width="1280" height="715" src="https://www.youtube.com/embed/QNOvuBt3qGQ">
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
+        
+        
 
     </main>
 
