--- a/projekt/aboutus.html
+++ b/projekt/aboutus.html
@@ -74,18 +74,18 @@
 
         </div>
         <span class="gruppenfoto">
-            <img src=https://images.unsplash.com/photo-1584048333516-bdf1d5305f1b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80
+            <img src="https://images.unsplash.com/photo-1584048333516-bdf1d5305f1b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1951&q=80"
                 class="gphoto" alt="Gruppenfoto der Belegschaft">
         </span>
     </main>
     <footer class="footerborder">
-        <span class="footertxt">
+        <div class="footertxt">
 
             <a href="Impressum.html">Impressum</a>
             <p>Copyright David Panchalingam</p>
 
 
-        </span>
+        </div>
 
     </footer>
 </body>
