--- a/projekt/contact.html
+++ b/projekt/contact.html
@@ -12,8 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="logo" href="img/black_firefox.png">
     <meta name="description" content="website, david, panchalingam">
     <link rel="stylesheet" href="style/style.css">
@@ -69,41 +69,51 @@
             </div>
             <div class="welcome">
                 <p class="mtext">Wenn sie eine Beratung wünschen kontaktieren sie uns gerne jederzeit</p>
-            </div class="welcome">
-                <div class="welcome"><p>David Panchalingam</p></div>
-                <div class="welcome"><p>Sonnmattweg 22</p></div>
-                <div class="welcome"><p>3110 Münsingen</p></div>
-                <div class="welcome"><p>david.panchalingam@ict.csbe.ch</p></div>
-                <div class="welcome"><p>078 624 71 08</p></div>
-                
-                
-        </div>
-            <div>
-                <div class="karte">
-                <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2727.2352714769936!2d7.56677466715687!3d46.878419889571596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e4a7251ab9a1d%3A0x5f9bb2463fd9799c!2sSonnmattweg%2022%2C%203110%20M%C3%BCnsingen!5e0!3m2!1sde!2sch!4v1618131695681!5m2!1sde!2sch"
-                 allowfullscreen="" loading="lazy"></iframe>
-                 </div>
-                <form class="kontaktbox">
-                    <label for="vorname">Vorname</label><input class="kontaktformular" id="vorname" type="text">
-                    <label for="nachname">Nachname</label><input class="kontaktformular" id="nachname" type="text">
-                    <label for="telefonnummer">Telefonnummer</label><input class="kontaktformular" id="telefonnummer"
-                        type="text">
-                    <label for="email">Email</label><input class="kontaktformular" id="email" type="text">
-                    <label for="button"></label><input class="kontaktformular" id="button" type="submit">
-                </form>
+            </div>
+            <div class="welcome">
+                <p>David Panchalingam</p>
+            </div>
+            <div class="welcome">
+                <p>Sonnmattweg 22</p>
+            </div>
+            <div class="welcome">
+                <p>3110 Münsingen</p>
+            </div>
+            <div class="welcome">
+                <p>david.panchalingam@ict.csbe.ch</p>
+            </div>
+            <div class="welcome">
+                <p>078 624 71 08</p>
             </div>
 
-            <footer class="footerborder">
-                <span class="footertxt">
 
-                    <a href="Impressum.html">Impressum</a>
-                    <p>Copyright David Panchalingam</p>
+        </div>
+        <div>
+            <div class="karte">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2727.2352714769936!2d7.56677466715687!3d46.878419889571596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478e4a7251ab9a1d%3A0x5f9bb2463fd9799c!2sSonnmattweg%2022%2C%203110%20M%C3%BCnsingen!5e0!3m2!1sde!2sch!4v1618131695681!5m2!1sde!2sch"
+                    allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <form class="kontaktbox">
+                <label for="vorname">Vorname</label><input class="kontaktformular" id="vorname" type="text">
+                <label for="nachname">Nachname</label><input class="kontaktformular" id="nachname" type="text">
+                <label for="telefonnummer">Telefonnummer</label><input class="kontaktformular" id="telefonnummer"
+                    type="text">
+                <label for="email">Email</label><input class="kontaktformular" id="email" type="text">
+                <label for="button"></label><input class="kontaktformular" id="button" type="submit">
+            </form>
+        </div>
+        </main>
+        <footer class="footerborder">
+            <div class="footertxt">
+
+                <a href="Impressum.html">Impressum</a>
+                <p>Copyright David Panchalingam</p>
 
 
-                </span>
+            </div>
 
-            </footer>
+        </footer>
 </body>
 
 </html>
