--- a/projekt/index.html
+++ b/projekt/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
         integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
         crossorigin="anonymous"></script>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="logo" href="img/black_firefox.png">
     <meta name="description" content="website, david, panchalingam">
     <link rel="stylesheet" href="style/style.css">
@@ -33,10 +33,10 @@
 
 
             </a>
+            <div id="Burger"> <a href="#">
+                    <i class="fas fa-bars"></i>
+                </a></div>
 
-            <a id="Burger" href="#">
-                <i class="fas fa-bars"></i>
-            </a>
 
         </div>
         <nav>
@@ -79,8 +79,8 @@
         </div>
         <div class="borderyt">
 
-            <iframe width="1280" height="715" src="https://www.youtube.com/embed/QNOvuBt3qGQ">
-                title="YouTube video player" frameborder="0"
+            <iframe width="949" height="534" src="https://www.youtube.com/embed/YNcBqW0CkpM"
+                title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
