--- a/projekt/Impressum.html
+++ b/projekt/Impressum.html
@@ -64,7 +64,7 @@
     </header>
     <main>
         <div class="impressum">
-            <p>Alle Links dienen zu Demonstrationszwecken und die zusmammenarbeit ist nicht existent!</p>
+            <p>Alle Links dienen zu Demonstrationszwecken und die Zusmammenarbeit ist nicht existent!</p>
             <p>Alle Fotos und Logos die benutzt wurden sind Lizenzfrei von den untenstehenden Links verfügbar</p>
             <p>Alle Videos dienen nur zu Demonstrationszwecken ich besitzt die rechte nicht</p>
             <a href="https://de.findicons.com/">Findicons</a>
