--- a/projekt/Impressum.html
+++ b/projekt/Impressum.html
@@ -66,7 +66,7 @@
         <div class="impressum">
             <p>Alle Links dienen zu Demonstrationszwecken und die Zusmammenarbeit ist nicht existent!</p>
             <p>Alle Fotos und Logos die benutzt wurden sind Lizenzfrei von den untenstehenden Links verfügbar</p>
-            <p>Alle Videos dienen nur zu Demonstrationszwecken ich besitzt die rechte nicht</p>
+            <p>Alle Videos dienen nur zu Demonstrationszwecken ich besitzte die Rechte nicht</p>
             <a href="https://de.findicons.com/">Findicons</a>
             <a href="https://unsplash.com/">Unsplash</a>
             <a href="https://fontawesome.com/">Fontawesome</a>
